[project]
name = "sample-flask-auth"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Tamicktom", email = "rickpokemon38@gmail.com"},
]
dependencies = ["requests>=2.32.5", "pytest>=9.0.2", "Flask>=3.1.2", "Flask-SQLAlchemy>=3.1.1", "Flask-Login>=0.6.3", "Werkzeug>=3.1.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
